        system tray (this bug was reported by Marcelo and Iulian Tocu as
        #1824666)
   - Updated README/Info dialog (OpenSSL exception in license)
   - Updated Dutch translation (thanks to Erwin Poeze)
   - Added Erwin Poeze to contributors
   - Bugfix: Handling of message sequence numbers when using IMAP4 (thanks to
        Jan Outrata for providing a patch; this was debian bug #472080)
   - Feature: Substituted getaddrinfo for deprecated gethostbyname; now IPv6
        should be possible
   - Added Jan Outrata to contributors

Version 2.2.10
 * Robert Sowada
   - Changed version to 2.2.10
   - Updated Dutch translation (thanks to Erwin Poeze)
   - Added Erwin Poeze to contributors
   - Bugfix: Handling of message sequence numbers when using IMAP4 (thanks to
        Jan Outrata for providing a patch; this was debian bug #472080)
   - Added Jan Outrata to contributors

Version 2.2.9		2008-02-03 17:48
 * Robert Sowada
   - Changed version to 2.2.9
   - Bugfix: The last capability sent by an IMAP4 server was ignored (backport
        from 2.3.0 CVS)
   - Bugfix: The capability command when using IMAP4 was sometimes sent twice
	(backport from 2.3.0 CVS)
   - Bugfix: Infinite loop when using system tray without image or without
        system tray (this bug was reported by Marcelo and Iulian Tocu as
        #1824666; backport from 2.3.0 CVS)
   - Updated README/Info dialog (OpenSSL exception in license)
   - Updated German translation

Version 2.2.8		2007-09-09 18:45
 * Robert Sowada
   - Changed version to 2.2.8
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Upgraded license to GPL version 3
   - Updated German translation	
	
Version 2.2.7		2007-07-15 21:20
 * Robert Sowada
   - Changed version to 2.2.7
   - Backport of signal code cleanup (from gnubiff 2.3.0 CVS)
   - Backport of showing/hiding popup via signals feature (from